--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ clap = { version = "4.0.15", features = ["derive"] }
 config = "0.13.2"
 env_logger = "0.9.1"
 log = "0.4.17"
+serde = { version = "1.0.145", features = ["derive"] }
+serde_yaml = "0.9.13"
