--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+aes-gcm-siv = "0.11.1"
 clap = { version = "4.0.15", features = ["derive"] }
 config = "0.13.2"
 env_logger = "0.9.1"
